@@ -2,8 +2,10 @@ SUBDIRS = src docs
 
 EXTRA_DIST =  alcc.msp alc.msp alc.rc alc.ico alc.iss
 
+if ALC
 dist_icon_DATA = alc.xpm
 icondir = $(datadir)/pixmaps
 
 dist_util_DATA = alc.desktop
 utildir = $(datadir)/applications
+endif
