@@ -17,12 +17,14 @@ Trunk
 		* Added --config-dir option to amuled.
 		* Fixed typos in the man pages.
 		* Added manpage for amulegui.
+		* Added amulegui desktop icon (with Gerd78).
 
 	Gerd78:
 		* Added autostart-xas to rpm .spec files.
 		* Patch for autoconf >= 2.60.
 		* Patch for redefinition of $(docdir) in docs/Makefile.am.
 		* Patch for aMule .desktop files.
+		* Added amulegui desktop icon (with Vollstrecker).
 
 	GonoszTopi:
 		* Added ability to compile amulecmd without threading support.
